--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,85 @@
     width: 100%;
     height: 500px;
     margin-bottom: 20px;
+    position: relative;
 }
+
+.map-info {
+    position: absolute;
+    top: 140px;
+    left: 65px;
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.4);
+    width: 250px;
+    height: 300px;
+    padding: 8px;
+}
+.map-title .control-info {
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 4px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    color: red;
+    border: 1px solid #ff7757;
+    background-color: #d1d4cc;
+}
+
+.map-title .control-info:hover {
+    color: #fff;
+    background-color: #ff7757;
+
+}
+.map-title h2 {
+    font-size: 20px;
+    color: #333;
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    text-align: center;
+    border-bottom: 1px solid #ccc;
+}
+
+.map-info p {
+    font-size: 16px;
+    color: #555;
+    margin-bottom: 10px;
+    text-align: justify;
+}
+
+.list-control-map{
+    position: absolute;
+    top: 150px;
+    left: 10px;
+}
+.list-control-map i {
+    font-size: 24px;
+    color: #ffffff;
+    cursor: pointer;
+    margin-right: 10px;
+    transition: color 0.3s, transform 0.3s;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #7c4545;
+    text-align: center;
+    margin-bottom: 20px;
+    border-radius: 50%;
+    padding: 0;
+}
+.list-control-map i:hover {
+    background-color: #ff7757;
+    transform: scale(1.2);
+}
+
+
+
+
 .list-dia-diem {
     list-style: none;
     display: grid;
