--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,10 +163,10 @@
 }
 
 .bg-red-corners {
-    background-image: url(/HueFestival/assets/img/Button/bg-red-tl.jpg), 
-                  url(/HueFestival/assets/img/Button/bg-red-tr.jpg), 
-                  url(/HueFestival/assets/img/Button/bg-red-br.jpg), 
-                  url(/HueFestival/assets/img/Button/bg-red-bl.jpg);    
+    background-image: url(../../img/Button/bg-red-tl.jpg), 
+                  url(../../img/Button/bg-red-tr.jpg), 
+                  url(../../img/Button/bg-red-br.jpg), 
+                  url(../../img/Button/bg-red-bl.jpg);    
     background-repeat: no-repeat;
     background-position: 0 0, 100% 0, 100% 100%, 0 100%;
     background-color: #a5190e;
