--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@
 .section-food {
     position: relative;
     padding-top: 30px;
-    background-image: url(../../assets/img/Background/bg-food.jpg);
+    background-image: url(../img/Background/bg-food.jpg);
     background-size: cover;
     background-position: center;
     z-index: 0;
@@ -189,10 +189,10 @@
 }
 
 .bg-red-corners {
-    background-image: url(../../img/Button/bg-red-tl.jpg), 
-                  url(../../img/Button/bg-red-tr.jpg), 
-                  url(../../img/Button/bg-red-br.jpg), 
-                  url(../../img/Button/bg-red-bl.jpg);    
+    background-image: url(../img/Button/bg-red-tl.jpg), 
+                  url(../img/Button/bg-red-tr.jpg), 
+                  url(../img/Button/bg-red-br.jpg), 
+                  url(../img/Button/bg-red-bl.jpg);    
     background-repeat: no-repeat;
     background-position: 0 0, 100% 0, 100% 100%, 0 100%;
     background-color: #a5190e;
