--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,11 +36,8 @@
 
 .section-food {
     width: 100%;
-}
-
-.section-food {
     position: relative;
-    padding-top: 30px;
+    padding: 24px 0px;
     background-image: url(../img/Background/bg-food.jpg);
     background-size: cover;
     background-position: center;
@@ -156,7 +153,7 @@
 
 .food-infor h3 {
     color: #A5190E;
-    font-size: 34px;
+    font-size: 32px;
     font-weight: bold;
 }
 
@@ -164,9 +161,10 @@
     background-color: #FBD3FF;
     color: #6d0ad0;
     padding: 2px 8px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
     border-radius: 16px;
+    text-transform: uppercase;
 }
 
 .btn {
