--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
     background-color: white;
     display: flex;
     align-items: center;
-    padding: 20px 40px;
+    padding: 20px 30px;
     overflow: hidden;
     z-index: 0;
     height: 80px;
@@ -29,6 +29,7 @@
     font-weight: 600;
     margin-right: 30px;
     font-size: 20px;
+    z-index: 2;
 }
 
 .menu a:first-of-type {
@@ -77,7 +78,7 @@
     color: black;
     cursor: pointer;
     margin-left: auto;
-    margin-top: -40px; /* 👈 nâng lên */
+    margin-top: -40px;
     z-index: 10;
 }
 
@@ -87,62 +88,6 @@
     gap: 20px;
 }
 
-@media screen and (max-width: 768px) {
-    .menu {
-        flex-direction: column;
-        align-items: flex-start;
-        height: auto;
-    }
-
-    .menu-toggle {
-        display: block;
-    }
-
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        margin-top: 10px;
-        gap: 10px;
-    }
-
-    .nav-links.active {
-        display: flex;
-    }
-
-    .nav-links a {
-        width: 100%;
-        text-align: left;
-        padding-left: 10px;
-        font-family: "Mali", sans-serif;
-        font-size: 20px;
-        font-weight: 600;
-        color: black;
-        text-decoration: none;
-    }
-
-    #gioithieu::after {
-        display: none !important;
-    }
-
-    #gioithieu {
-        all: unset;
-        display: block;
-        font-family: "Mali", sans-serif;
-        font-size: 20px;
-        font-weight: 600;
-        color: black !important;
-        text-decoration: none;
-        text-align: left !important;
-        line-height: normal;
-        height: auto;
-        width: 100%;
-        margin: 0;
-    }
-    .timeline-item h4{
-        font-size: 14px!important;
-    }
-}
 button{
     border: none;
     outline: none;
@@ -231,6 +176,7 @@ button{
 .event-body {
     display: flex;
     margin: 50px auto;
+    margin-bottom: 0px;
     padding-left: 100px;
     z-index: 2;
     position: relative;
@@ -244,7 +190,7 @@ button{
     border: 1px solid #c09508;
     padding: 15px;
     border-radius: 10px;
-    height: 50px;
+    height: 55px;
     width: 80%;
     margin-right: 50px;
     margin-bottom: 20px;
@@ -254,22 +200,18 @@ button{
 .timeline-item h4 {
     font-size: 16px;
     font-weight: 500;
-    margin-top: 0 ;
+    margin: 0 ;
 }
 .timeline-item p {
     font-size: 14px;
-}
-.timeline-item:first-of-type  {
-    background-color: #a40000;
-    border: none;
-    color: white;
-    position: relative;
+    margin-top: 10px ;
 }
 .event-info {
     flex: 2;
+    margin-top: 0px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 0px;
 }
 
 .event-contents {
@@ -329,8 +271,10 @@ button{
     display: flex;
     align-items: flex-start;
     gap: 30px;
-    margin-bottom: 60px;
+    margin: 0 auto;
     flex-wrap: wrap;
+    width: 85%;
+    margin-bottom: 50px;
 }
 
 .village-item-reverse {
@@ -396,6 +340,8 @@ button{
     border-radius: 5px;
     position: relative;
     align-items: center;
+    min-height: 36px;
+    color: #fff;
 }
 .bg-red-corners::after {
     border: 1px solid #f7bd01;
@@ -408,3 +354,78 @@ button{
     bottom: 4px;
 }
 
+
+@media (max-width: 768px) {
+    .menu {
+        flex-direction: column;
+        align-items: flex-start;
+        height: auto;
+    }
+
+    .menu-toggle {
+        display: block;
+    }
+
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 10px;
+        gap: 10px;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    .nav-links a {
+        width: 100%;
+        text-align: left;
+        padding-left: 10px;
+        font-family: "Mali", sans-serif;
+        font-size: 20px;
+        font-weight: 600;
+        color: black;
+        text-decoration: none;
+    }
+
+    #gioithieu::after {
+        display: none !important;
+    }
+
+    #gioithieu {
+        all: unset;
+        display: block;
+        font-family: "Mali", sans-serif;
+        font-size: 20px;
+        font-weight: 600;
+        color: black !important;
+        text-decoration: none;
+        text-align: left !important;
+        line-height: normal;
+        height: auto;
+        width: 100%;
+        margin: 0;
+        color: red !important;
+    }
+
+    .timeline-item h4 {
+        font-size: 13px !important;
+    }
+
+    .timeline-item p {
+        font-size: 12px !important;
+    }
+    .title{
+        font-size: 24px !important;
+    }
+    .content {
+        font-size: 16px !important;
+    }
+}
+@media (max-width: 1024px) {
+    .menu a{
+        font-size: 16px;
+        margin-right: 20px;
+    }
+}
